--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "laravel/laravel",
+    "name": "nurlan270/blog-website",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "description": "Simple blog - website where people can share their blogs",
+    "keywords": ["laravel", "framework", "blog", "post"],
     "license": "MIT",
     "require": {
         "php": "^8.2",
