--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,18 @@
     "description": "Simple blog - website where people can share their blogs",
     "keywords": ["laravel", "framework", "blog", "post"],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/hywax/ya-metrika"
+        }
+    ],
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "laravel/ui": "^4.5"
+        "laravel/ui": "^4.5",
+        "hywax/ya-metrika": "dev-main"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
